add promises and Colors NPM for better questions

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/angeladeveloper/GenorateReadMe#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "inquirer": "^8.2.4"
   }
 }
